Fixed success page spacing

--- a/success.css
+++ b/success.css
@@ -61,17 +61,18 @@ body {
 }
 
 h1 {
-    font-size: 2.5rem;
-    line-height: 2.75rem;
+    font-size: 2.25rem;
+    line-height: 2.5rem;
     font-weight: bold;
-    margin-bottom: 0.75rem;
+    margin-bottom: 0.5rem;
     text-align: center;
 }
 
 @media only screen and (max-width: 780px) {
     h1 {
-        font-size: 2.25rem;
-        margin-bottom: 0.5rem;
+        font-size: 2rem;
+        line-height: 2.25rem;
+        margin-bottom: 0.25rem;
     }
 }
 
@@ -95,7 +96,7 @@ h1 > br {
     text-align: center;
     color: #6D6D6D;
     max-width: 24rem;
-    margin: 0 auto 1.5rem;
+    margin: 0 auto 1.25rem;
     font-size: 1rem;
     line-height: 1.5rem;
 }
@@ -103,31 +104,17 @@ h1 > br {
 @media only screen and (max-width: 780px) {
     .blurb {
         max-width: 18rem;
-        margin: 0 auto 1.25rem;
+        margin: 0 auto 1rem;
     }
 }
 
 .link-to-your-manifesto {
-    font-size: 1.5rem;
-        line-height: 2rem;
-        margin-bottom: 0.75rem;
-}
-
-@media only screen and (max-width: 780px) {
-    .link-to-your-manifesto {
-        font-size: 1.25rem;
-        line-height: 1.75rem;
-    }
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    margin-bottom: 0.5rem;
 }
 
 .link-to-index {
     font-size: 1rem;
     line-height: 1.5rem;
-}
-
-@media only screen and (max-width: 780px) {
-    .link-to-index {
-        font-size: 0.875rem;
-        line-height: 1.25rem;
-    }
 }
